@@ -1,3 +1,5 @@
+	* forward declaring libtorrent types is discouraged. a new fwd.hpp header is provided
+
 1.1.3 release
 
 	* removed (broken) support for incoming connections over socks5
